# cpp_project_template

./: CMakeLists.txt
include/mylib/: public-header.hpp
src/mylib/: implementation.cpp  private-header.hpp
test/: test-myclass.cpp
